<resources>
    <string name="app_name">BattleOfCastle</string>
    <string name="TITLE">Its time to show your might!</string>
    <string name="CASTLE">castlebattle</string>
    <string name="PLAYERONE">PlayerOne</string>
    <string name="PLAYERTWO">PlayerTwo</string>
    <string name="result">WIN</string>
    <string name="wIN">WIN</string>
    <string name="BATTLE">BATTLE</string>
    <string name="VS">VS</string>
    <string name="WIN">WIN</string>
    <string name="BATTLECASTLE">BATTLECASTLE</string>
    <string name="Player2">Player 2</string>
    <string name="PlayerTwo">PLAYER1</string>
    <string name="PlayerDua">PLAYER2</string>
    <string name="BattleNow">BATTLE</string>
    <string name="PLAYER1">PLAYER1</string>
    <string name="PlayerOne">PlayeOne</string>
</resources>